--- a/css/style2.css
+++ b/css/style2.css
@@ -1,2 +1,25 @@
-@import "slideshowstyle2.css";
+
 @import "base.css";
+
+img.resize{
+    width: 940px; /* you can use % */
+    height: auto;
+}
+
+#slideshow_container
+{ height: 735px;
+  background: #0043A8;
+  padding-top: 20px;}
+  
+.slideshow
+{ width: 940px;
+  height: 705px;
+  margin: 0 auto;}  
+  
+/* styling for the slideshow on the homepage */
+ul.slideshow {
+  list-style: none;
+  width: 940px;
+  height: 705px;
+  overflow: hidden;
+  position: relative;}
