--- a/css/base.css
+++ b/css/base.css
@@ -199,11 +199,16 @@ ul img {
   margin-top: 20px;
   margin-bottom: 20px;}
   
+.content_container
+{ width: 450px;
+  margin: 20px 10px 0 0;
+  float: left;}
+  
 footer
-{ width: 400px;
-  height: 20px;
-  padding-top: 25px;
-  padding-bottom: 20px;  
+{ width: 340px;
+  height: 10px;
+  padding-top: 5px;
+  padding-bottom: 15px;  
   font-weight: bold;
   text-align: center; 
   text-shadow: 1px 1px #000;
