--- a/css/resume.css
+++ b/css/resume.css
@@ -58,7 +58,7 @@ p {
 }
 
 #contactDetails p {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: Rokkitt, Helvetica, Arial, sans-serif;
 	font-style: italic;
 	font-size: 1.0em;
 }
