--- a/css/resume.css
+++ b/css/resume.css
@@ -47,8 +47,8 @@ p {
 }
 
 #headshot img {
-	width: 90%;
-	height: auto;
+	width: 50%;
+	height: 50%;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
 }
