--- a/css/resume.css
+++ b/css/resume.css
@@ -47,8 +47,8 @@ p {
 }
 
 #headshot img {
-	width: 50%;
-	height: 50%;
+	width: 40%;
+	height: 40%;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
 }
@@ -62,6 +62,11 @@ p {
 	font-family: Helvetica, Arial, sans-serif;
 	font-style: italic;
 	font-size: 14px;
+}
+
+#papers {
+	float: left;
+	width: 50%;
 }
 
 .title {
